--- a/MyOwnNotes/android/app/src/main/AndroidManifest.xml
+++ b/MyOwnNotes/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+      <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyBNtN5hErQHbuR9vrNJSfYXYsmQsxw6qb8"/>
+      
+      <!-- You will also only need to add this uses-libray tag -->
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
+
+    
 
 </manifest>
