--- a/MyOwnNotes/android/app/build.gradle
+++ b/MyOwnNotes/android/app/build.gradle
@@ -213,6 +213,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':react-native-localization')
 }
 
 // Run this once to be able to run the application with BUCK
